# Magma-GOST-_implement

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: benchmark_magma.cpp  testspeed_magma.cpp  testspeed_multithread_magma.cpp  testspeed_singlethread_magma.cpp
src/: constants.h  helper.cpp  helper.hpp  magma.cpp  magma.hpp  magma_base.cpp  magma_base.hpp  magma_cbc.cpp  magma_cbc.hpp  magma_ecb.cpp  magma_ecb.hpp  magma_utils.cpp  magma_utils.hpp  main.cpp  pad.cpp  pad.hpp
test/: test_magma.cpp
